[gd_scene load_steps=2 format=2]

[ext_resource path="res://DATExplorer.gd" type="Script" id=1]

[node name="DATExplorerContainer" type="VBoxContainer"]
margin_right = 1026.0
margin_bottom = 602.0
script = ExtResource( 1 )

[node name="TypeFilter" type="HBoxContainer" parent="."]
visible = false
margin_right = 1026.0
margin_bottom = 24.0

[node name="TypeID" type="Label" parent="TypeFilter"]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 19.0
text = "TypeID:"

[node name="TypeIDFilter" type="LineEdit" parent="TypeFilter"]
margin_left = 53.0
margin_right = 111.0
margin_bottom = 24.0
placeholder_text = "typeID (hex)"
caret_blink = true
caret_blink_speed = 0.5

[node name="FilterByTypeID" type="Button" parent="TypeFilter"]
margin_left = 115.0
margin_right = 211.0
margin_bottom = 24.0
text = "Filter by type"

[node name="InstanceFilter" type="HBoxContainer" parent="."]
visible = false
margin_right = 1026.0
margin_bottom = 24.0

[node name="InstanceID" type="Label" parent="InstanceFilter"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "InstanceID"

[node name="InstanceIDFilter" type="LineEdit" parent="InstanceFilter"]
margin_left = 74.0
margin_right = 132.0
margin_bottom = 24.0
placeholder_text = "instanceID"

[node name="FilterByInstanceID" type="Button" parent="InstanceFilter"]
margin_left = 136.0
margin_right = 258.0
margin_bottom = 24.0
text = "Filter by instance"

[node name="DATTree" type="Tree" parent="."]
visible = false
margin_right = 1026.0
margin_bottom = 500.0
rect_min_size = Vector2( 1, 500 )

[node name="DirectoryChoice" type="FileDialog" parent="."]
visible = true
margin_right = 1026.0
margin_bottom = 149.0
rect_min_size = Vector2( 300, 105 )
window_title = "Ouvrir un r√©pertoire"
resizable = true
dialog_hide_on_ok = true
mode = 2
access = 2
show_hidden_files = true

[connection signal="dir_selected" from="DirectoryChoice" to="." method="_on_DirectoryChoice_dir_selected"]
